Removed responses table; fixed output for non-instructor results; added startdate and expires
