# flask/swagger_server/swagger/swagger.yaml
@@ -174,6 +174,29 @@ paths:
         400:
           description: "bad input parameter"
       x-swagger-router-controller: "swagger_server.controllers.teachers_controller"
+  /test_publish:
+    get:
+      tags:
+      - "teachers"
+      - "admins"
+      summary: "publishes a survey with the specified name; used for testing purposes"
+      operationId: "test_publish_get"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "name"
+        in: "query"
+        description: "the name for a survey"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "success message"
+          schema:
+            $ref: "#/definitions/Course"
+        400:
+          description: "bad input parameter"
+      x-swagger-router-controller: "swagger_server.controllers.teachers_controller"
   /results:
     get:
       tags:
